--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="This is awsome website">
-    <title>My Site hahah</title>
+    <title>Site Index First</title>
 </head>
 <body>
 
     <!-- Heading H1 to H6  -->
-    <h1>Hello World!</h1>
+    <h1>Hello World! This is Site 1</h1>
     <h2>Say oh yeah</h2>
     
     <br/>
@@ -23,7 +23,7 @@
     <!-- p for paragraph -->
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae praesentium doloremque quod ab ducimus libero, assumenda eaque placeat modi cum a, iusto temporibus repudiandae quae sapiente eos magni, eius natus!</p>
 
-
+    <p style="color: aquamarine">Return to <a href="index4.html" style="color:yellow">main page</a></p>
 
     
 </body>
