--- a/index2.html
+++ b/index2.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site index 2</title>
 </head>
-<body style="background-color: aquamarine">
-    <H1>Style and Color</H1>
+<body style="background-color: rgb(20,34,53)">
+    <H1 style="color: red">This is site 2</H1>
+    <H2 style="color:aquamarine">Site and color</H2>
     <p style="color:red">You can style your color HTML and make it loop pretty much</p>
+    <p style="color: aquamarine">Return to <a href="index4.html" style="color:yellow">main page</a></p>
 </body>
 </html>
