--- a/index3.html
+++ b/index3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site index 3</title>
 </head>
 
 <!-- Moi phan body cua moi website deu co 3 phan: 
@@ -12,7 +12,7 @@
      + main
      + footer
 -->
-<body>
+<body style="color:rgb(160, 102, 25)">
     <header>
     <!--Trong phan header thuong se co thanh menu vidu nhu homepage
         aboutus, the nav de lam dieu do.
@@ -23,6 +23,10 @@
     </header>
 
     <main>
+    <h1 style="color: red">This is Site 3</h1>
+    <h2 style="color:rgb(20,34,53)">Layout the Website</h2>
+    <p>Return to <a href="index4.html">main page</a></p>
+
 
         
     </main>
